# sql-course

./: LICENSE  README.md  principais-comandos.md  pyproject.toml
sql-course/: function-aggregate.md  groupby.md  introduction.md  principais-comandos.md  references.md  sql-delete.md  sql-insert.md  sql-update.md
