[tool.poetry]
name = "sql-course"
version = "0.2.0"
description = ""
authors = ["Britodfbr <britodfbr@gmail.com>"]
packages = [
    {include='sql-course', from=""}
]
[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
